force-app/main/default/objects/Incident_Information__c/Incident_Information__c.object-meta.xml
<CustomObject>
    <label>Incident Information</label>
    <nameField>
        <displayFormat>Incident - {000000}</displayFormat>
        <label>Incident Information Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Information</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>