force-app/main/default/objects/Incident_Information__c/fields/City2__c.field-meta.xml
<CustomField>
    <fullName>City2__c</fullName>
    <label>City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>