force-app/main/default/objects/Incident_Information__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <label>City</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>London</fullName>
            </value>
            <value>
                <fullName>Cardiff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>