force-app/main/default/objects/Incident_Information__c/fields/Incident_Date_Text__c.field-meta.xml
<CustomField>
    <fullName>Incident_Date_Text__c</fullName>
    <formula>TEXT(Incident_Date__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Date Text</label>
    <type>Text</type>
</CustomField>