force-app/main/default/objects/Incident_Information__c/fields/Incident_ID__c.field-meta.xml
<CustomField>
    <fullName>Incident_ID__c</fullName>
    <displayFormat>Inc-{00000}</displayFormat>
    <label>Incident ID</label>
    <type>AutoNumber</type>
</CustomField>