force-app/main/default/objects/Incident_Information__c/fields/Incident_Key__c.field-meta.xml
<CustomField>
    <fullName>Incident_Key__c</fullName>
    <formula>TEXT( Incident_Date__c )&amp;IF (ISBLANK(Postal_Code__c ) = TRUE , &apos;&apos;, LEFT(Postal_Code__c, 3))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Key</label>
    <type>Text</type>
</CustomField>