force-app/main/default/objects/Incident_Information__c/fields/Incident_Location__c.field-meta.xml
<CustomField>
    <fullName>Incident_Location__c</fullName>
    <label>Incident Location</label>
    <scale>4</scale>
    <type>Location</type>
</CustomField>