force-app/main/default/objects/Incident_Information__c/fields/Incident_Matching_Date__c.field-meta.xml
<CustomField>
    <fullName>Incident_Matching_Date__c</fullName>
    <formula>DATEVALUE(Incident_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incident Matching Date</label>
    <type>Date</type>
</CustomField>