force-app/main/default/objects/Incident_Information__c/fields/Incident_Type__c.field-meta.xml
<CustomField>
    <fullName>Incident_Type__c</fullName>
    <label>Incident Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Motor Vehicle Accident</fullName>
            </value>
            <value>
                <fullName>Employment Accident</fullName>
            </value>
            <value>
                <fullName>Public Accident</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>