force-app/main/default/objects/Incident_Information__c/fields/Postal_Code_Shorten__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code_Shorten__c</fullName>
    <formula>IF (ISBLANK(Postal_Code__c ) = TRUE , &apos;&apos;, LEFT(Postal_Code__c , 3))</formula>
    <label>Postal Code Shorten</label>
    <type>Text</type>
</CustomField>