force-app/main/default/objects/Incident_Information__c/fields/Public_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Public_Organisation_Name__c</fullName>
    <label>Public Organisation Name</label>
    <length>128</length>
    <type>Text</type>
</CustomField>