force-app/main/default/objects/Incident_Information__c/fields/State_County__c.field-meta.xml
<CustomField>
    <fullName>State_County__c</fullName>
    <label>State / County</label>
    <length>128</length>
    <type>Text</type>
</CustomField>