force-app/main/default/objects/Incident_Information__c/recordTypes/Arbitration_Only.recordType-meta.xml
<RecordType>
    <fullName>Arbitration_Only</fullName>
    <active>true</active>
    <label>Arbitration Only</label>
</RecordType>