force-app/main/default/objects/Incident_Information__c/recordTypes/PI_PL_End_to_End.recordType-meta.xml
<RecordType>
    <fullName>PI_PL_End_to_End</fullName>
    <active>true</active>
    <label>PI-PL-End to End</label>
</RecordType>