force-app/main/default/objects/Incident_Information__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Incident_Type__c</columns>
    <columns>Incident_Date__c</columns>
    <columns>Postal_Code__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>